--- a/PV_NA_Academico/appsettings.json
+++ b/PV_NA_Academico/appsettings.json
@@ -9,5 +9,17 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-9Q5CIP5;Database=PV_NA_Academico;User id=sa;password=Admin123;Encrypt=False;"
+  },
+  "Jwt": {
+    "Secret": "ClaveSuperSeguraDe32Caracteres!!",
+    "Issuer": "PV_NA",
+    "Audience": "PV_NA.Client",
+    "AccessTokenMinutes": 5,
+    "RefreshTokenMinutes": 15
+  },
+  "Services": {
+    "AuthBaseUrl": "http://localhost:5233", 
+    "BitacoraBaseUrl": "http://localhost:5210"
   }
+
 }
